# TubesPMC-K3_ClinicManagement

./: CMakeLists.txt  Makefile  README.md  main.c
app/: CMakeLists.txt
app/include/: app.h
app/src/: app.c
app/ui/: #interface.glade#  interface.glade  interface.glade~  main_interface.glade  main_interface.glade~
gui/: CMakeLists.txt
gui/include/: mainwindow.h
gui/src/: libmainwindow.c
lib/: CMakeLists.txt
lib/include/: includeall.h  manajemendata.h  pendapatan.h  petugasmedis.h  standardclib.h  totaldiagnose.h  workwithdata.h
lib/src/: libmanajemendata.c  libpendapatan.c  libpetugasmedis.c  libworkwithdata.c  totaldiagnose.c
main/: main.c
resources/: DataPMC20232024(1).csv  DataPMC20232024(2).csv  DataPMC20232024(3).csv
